Package_Tools/include-C/mgl2/c/in_arbeit/fertig/data_cf.h

typedef void gsl_vector;

typedef void gsl_matrix;
double  mgl_ipow(double x,int n);

double  mgl_get_time(const char *time, const char *fmt);


HMDT  mgl_create_data();

HMDT  mgl_create_data_size(long nx, long ny, long nz);

HMDT  mgl_create_data_file(const char *fname);

void  mgl_delete_data(HMDT dat);


void  mgl_data_rearrange(HMDT dat, long mx,long my,long mz);

void  mgl_data_link(HMDT dat, mreal *A,long mx,long my,long mz);

void  mgl_data_set_float(HMDT dat, const float *A,long mx,long my,long mz);

void  mgl_data_set_double(HMDT dat, const double *A,long mx,long my,long mz);

void  mgl_data_set_float2(HMDT d, float const * const *A,long N1,long N2);

void  mgl_data_set_double2(HMDT d, double const * const *A,long N1,long N2);

void  mgl_data_set_float3(HMDT d, float const * const * const *A,long N1,long N2,long N3);

void  mgl_data_set_double3(HMDT d, double const * const * const *A,long N1,long N2,long N3);

void  mgl_data_set(HMDT dat, HCDT a);

void  mgl_data_set_vector(HMDT dat, gsl_vector *v);

void  mgl_data_set_matrix(HMDT dat, gsl_matrix *m);

void  mgl_data_set_value(HMDT dat, mreal v, long i, long j, long k);

mreal  mgl_data_get_value(HCDT dat, long i, long j, long k);

void  mgl_data_set_values(HMDT dat, const char *val, long nx, long ny, long nz);


int  mgl_data_read_hdf(HMDT d,const char *fname,const char *data);

int  mgl_data_read(HMDT dat, const char *fname);

int  mgl_data_read_mat(HMDT dat, const char *fname, long dim);

int  mgl_data_read_dim(HMDT dat, const char *fname,long mx,long my,long mz);

int  mgl_data_read_range(HMDT d, const char *templ, double n1, double n2, double step, int as_slice);

int  mgl_data_read_all(HMDT dat, const char *templ, int as_slice);

int  mgl_data_read_bin(HMDT dat, const char *fname, int type);

void  mgl_data_import(HMDT dat, const char *fname, const char *scheme,mreal v1,mreal v2);

int  mgl_data_scan_file(HMDT dat,const char *fname, const char *templ);

int  mgl_data_read_wfm(HMDT d,const char *fname, long num, long step, long start);

int  mgl_data_read_matlab(HMDT d,const char *fname,const char *data);


void  mgl_data_create(HMDT dat, long nx,long ny,long nz);

void  mgl_data_transpose(HMDT dat, const char *dim);

void  mgl_data_norm(HMDT dat, mreal v1,mreal v2,int sym,long dim);

void  mgl_data_norm_slice(HMDT dat, mreal v1,mreal v2,char dir,long keep_en,long sym);

void  mgl_data_limit(HMDT dat, mreal v);

void  mgl_data_coil(HMDT dat, mreal v1, mreal v2, int sep);

void  mgl_data_keep(HMDT dat, const char *how, long i, long j);


HMDT  mgl_data_subdata(HCDT dat, long xx,long yy,long zz);

HMDT  mgl_data_subdata_ext(HCDT dat, HCDT xx, HCDT yy, HCDT zz);

HMDT  mgl_data_column(HCDT dat, const char *eq);

HMDT  mgl_data_section(HCDT dat, HCDT ids, char dir, mreal val);

HMDT  mgl_data_section_val(HCDT dat, long id, char dir, mreal val);

HMDT  mgl_data_conts(mreal val, HCDT dat);

HMDT  mgl_formula_calc(const char *str, long n, ...);


/// Equidistantly fill the data to range [x1,x2] in direction dir
void  mgl_data_fill(HMDT dat, mreal x1,mreal x2,char dir);

void  mgl_data_fill_eq(HMGL gr, HMDT dat, const char *eq, HCDT vdat, HCDT wdat,const char *opt);

void  mgl_data_refill_gs(HMDT dat, HCDT xdat, HCDT vdat, mreal x1, mreal x2, long sl);

void  mgl_data_refill_x(HMDT dat, HCDT xdat, HCDT vdat, mreal x1, mreal x2, long sl);

void  mgl_data_refill_xy(HMDT dat, HCDT xdat, HCDT ydat, HCDT vdat, mreal x1, mreal x2, mreal y1, mreal y2, long sl);

void  mgl_data_refill_xyz(HMDT dat, HCDT xdat, HCDT ydat, HCDT zdat, HCDT vdat, mreal x1, mreal x2, mreal y1, mreal y2, mreal z1, mreal z2);

void  mgl_data_refill_gr(HMGL gr, HMDT dat, HCDT xdat, HCDT ydat, HCDT zdat, HCDT vdat, long sl, const char *opt);

void  mgl_data_grid(HMGL gr, HMDT d, HCDT xdat, HCDT ydat, HCDT zdat,const char *opt);

void  mgl_data_grid_xy(HMDT d, HCDT xdat, HCDT ydat, HCDT zdat, mreal x1, mreal x2, mreal y1, mreal y2);

void  mgl_data_put_val(HMDT dat, mreal val, long i, long j, long k);

void  mgl_data_put_dat(HMDT dat, HCDT val, long i, long j, long k);

void  mgl_data_modify(HMDT dat, const char *eq,long dim);

void  mgl_data_modify_vw(HMDT dat, const char *eq,HCDT vdat,HCDT wdat);

void  mgl_data_squeeze(HMDT dat, long rx,long ry,long rz,long smooth);


HMDT  mgl_data_ifs_2d(HCDT A, long n, long skip);

HMDT  mgl_data_ifs_3d(HCDT A, long n, long skip);

HMDT  mgl_data_ifs_file(const char *fname, const char *name, long n, long skip);

typedef enum {
	mglFlame2d_linear=0,	mglFlame2d_sinusoidal,	mglFlame2d_spherical,	mglFlame2d_swirl,		mglFlame2d_horseshoe,
	mglFlame2d_polar,		mglFlame2d_handkerchief,mglFlame2d_heart,		mglFlame2d_disc,		mglFlame2d_spiral,
	mglFlame2d_hyperbolic,	mglFlame2d_diamond,		mglFlame2d_ex,			mglFlame2d_julia,		mglFlame2d_bent,
	mglFlame2d_waves,		mglFlame2d_fisheye,		mglFlame2d_popcorn,		mglFlame2d_exponential,	mglFlame2d_power,
	mglFlame2d_cosine,		mglFlame2d_rings,		mglFlame2d_fan,			mglFlame2d_blob,		mglFlame2d_pdj,
	mglFlame2d_fan2,		mglFlame2d_rings2,		mglFlame2d_eyefish,		mglFlame2d_bubble,		mglFlame2d_cylinder,
	mglFlame2d_perspective,	mglFlame2d_noise,		mglFlame2d_juliaN,		mglFlame2d_juliaScope,	mglFlame2d_blur,
	mglFlame2d_gaussian,	mglFlame2d_radialBlur,	mglFlame2d_pie,			mglFlame2d_ngon,		mglFlame2d_curl,
	mglFlame2d_rectangles,	mglFlame2d_arch,		mglFlame2d_tangent,		mglFlame2d_square,		mglFlame2d_blade,
	mglFlame2d_secant,		mglFlame2d_rays,		mglFlame2d_twintrian,	mglFlame2d_cross,		mglFlame2d_disc2,
	mglFlame2d_supershape,	mglFlame2d_flower,		mglFlame2d_conic,		mglFlame2d_parabola,	mglFlame2d_bent2,
	mglFlame2d_bipolar,		mglFlame2d_boarders,	mglFlame2d_butterfly,	mglFlame2d_cell,		mglFlame2d_cpow,
	mglFlame2d_curve,		mglFlame2d_edisc,		mglFlame2d_elliptic,	mglFlame2d_escher,		mglFlame2d_foci,
	mglFlame2d_lazySusan,	mglFlame2d_loonie,		mglFlame2d_preBlur,		mglFlame2d_modulus,		mglFlame2d_oscope,
	mglFlame2d_polar2,		mglFlame2d_popcorn2,	mglFlame2d_scry,		mglFlame2d_separation,	mglFlame2d_split,
	mglFlame2d_splits,		mglFlame2d_stripes,		mglFlame2d_wedge,		mglFlame2d_wedgeJulia,	mglFlame2d_wedgeSph,
	mglFlame2d_whorl,		mglFlame2d_waves2,		mglFlame2d_exp,			mglFlame2d_log,			mglFlame2d_sin,
	mglFlame2d_cos,			mglFlame2d_tan,			mglFlame2d_sec,			mglFlame2d_csc,			mglFlame2d_cot,
	mglFlame2d_sinh,		mglFlame2d_cosh,		mglFlame2d_tanh,		mglFlame2d_sech,		mglFlame2d_csch,
	mglFlame2d_coth,		mglFlame2d_auger,		mglFlame2d_flux,		mglFlame2dLAST
}xxxxxxxxx;